# CompressMGARDCentroidOperator

./: .gitignore  CMakeLists.txt  CompressMGARDCentroidOperator.cpp  CompressMGARDCentroidOperator.h  DeviceKernels.h  DeviceKernels_CPU.cpp  DeviceKernels_HIP.cpp  MGARDXLossless.h  MGARDXLossless_HIP.cpp  MGARDXLossless_SERIAL.cpp  Plan.md  README.md  runconf_cpu  runconf_hip  runconfig_reorder_hip  test_node_sfc.sh
